# twinbase-ssi-api

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  iaa.py  pyproject.toml
requirements/: dev.txt  prod.txt
