[project]
name = "twinbase-ssi-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi", "uvicorn", "dtweb", "requests", "PyLD"]

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.packages.find]
where = ["vocabulary-generator", "redis-client", "sparql-client"]

# Development settings

[project.optional-dependencies]
dev = ["black", "mypy", "types-requests"]

[tool.black]
line-length = 88

[tool.pylint.format]
max-line-length = 88