[project]
name = "twinbase-ssi-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi", "uvicorn", "dtweb", "requests", "PyLD"]

[build-system]
requires = ["setuptools", "wheel"]

# Development settings

[project.optional-dependencies]
dev = ["black", "mypy", "isort", "types-requests"]

[tool.black]
line-length = 88

[tool.pylint.format]
max-line-length = 88